--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ p {
   font-weight:bold;
 }
 
-.degrees-container {
+.center-contents {
   margin: 0 auto 0 auto;
 }
 
@@ -40,6 +40,10 @@ h1,h2,h3,h4 {
   color:#666;
 }
 
+h1 {
+  font-size: 2em;
+}
+
 h2 {
   font-weight:bold;
   font-size:1.3em;
@@ -51,6 +55,10 @@ h2 {
 h3 {
   font-size:1.2em;
   letter-spacing:2px;
+}
+
+.resume h3 {
+  font-weight: bold;
 }
 
 ul {
@@ -197,7 +205,7 @@ a:hover{
   font-weight:bold;
 }
 
-.resume-wrapper {
+.section-wrapper {
   clear:both;
   max-width:100%;
 }
